[package]
name = "dna-structures"
version = "1.0.0"
authors = ["BlockX Labs <info@blockxlabs.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0" }
rstd = { package = "sp-std", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }

[dev-dependencies]
primitives = { package = "sp-core", git = "https://github.com/blockxlabs/substrate", branch = "master" }
runtime-io = { package = "sp-io", git = "https://github.com/blockxlabs/substrate",default-features = false, branch = "master" }
rand = "0.7"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"rstd/std",
]