[package]
name = "dna-testing"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test utilities for Substrate node."
edition = "2018"

[dependencies]
balances = { package = "paint-balances", git = "https://github.com/blockxlabs/substrate.git" }
client = { package = "sc-client", git = "https://github.com/blockxlabs/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
contracts = { package = "paint-contracts", git = "https://github.com/blockxlabs/substrate.git" }
grandpa = { package = "paint-grandpa", git = "https://github.com/blockxlabs/substrate.git" }
indices = { package = "paint-indices", git = "https://github.com/blockxlabs/substrate.git" }
keyring = { package = "sp-keyring", git = "https://github.com/blockxlabs/substrate.git" }
node-executor = { path = "../executor", package="dna-executor" }
node-primitives = { path = "../primitives", package="dna-primitives" }
node-runtime = { path = "../runtime", package="dna-runtime" }
primitives = { package = "sp-core", git = "https://github.com/blockxlabs/substrate.git" }
runtime-io = { package = "sp-io", git = "https://github.com/blockxlabs/substrate.git" }
runtime_support = { package = "paint-support", git = "https://github.com/blockxlabs/substrate.git" }
session = { package = "paint-session", git = "https://github.com/blockxlabs/substrate.git" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate.git" }
staking = { package = "paint-staking", git = "https://github.com/blockxlabs/substrate.git" }
sc-executor = { git = "https://github.com/blockxlabs/substrate.git" }
system = { package = "paint-system", git = "https://github.com/blockxlabs/substrate.git"    }
test-client = { package = "substrate-test-client", git = "https://github.com/blockxlabs/substrate.git" }
timestamp = { package = "paint-timestamp", git = "https://github.com/blockxlabs/substrate.git" }
transaction-payment = { package = "paint-transaction-payment", git = "https://github.com/blockxlabs/substrate.git" }
treasury = { package = "paint-treasury", git = "https://github.com/blockxlabs/substrate.git" }
wabt = "0.9.2"
