[package]
name = "node-cli"
version = "0.1.0"
authors = ["Blockx Labs"]
description = "BlockX Labs node implementation in Rust & Substrate."
build = "build.rs"
edition = "2018"
default-run = "dnachain"

[[bin]]
name = "dnachain"
path = "bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
futures01 = { package = "futures", version = "0.1.29" }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.2.1"
serde_json = "1.0"
log = "0.4.8"
structopt = "0.3.3"
jsonrpc-core = "13.2.0"

# primitives
node-primitives = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
primitives = { package = "sp-core", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }

# core dependencies
client = { package = "sc-client", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
inherents = { package = "sp-inherents", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
txpool = { package = "sc-transaction-pool", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
network = { package = "sc-network", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
babe = { package = "sc-consensus-babe", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
basic-authorship = { package = "sc-basic-authority", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
sc-service = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
telemetry = { package = "sc-telemetry", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
keystore = { package = "sc-keystore", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
consensus-common = { package = "sp-consensus", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }

# frame dependencies
im-online = { package = "pallet-im-online", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }

# node-specific dependencies
node-runtime = { path = "../runtime" }
node-executor = { path = "../executor" }
executor = { package = "sc-executor", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
node-rpc = { package = "sc-rpc", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }

# CLI-specific dependencies
tokio = { version = "0.1.22", optional = true }
exit-future = { version = "0.1.4", optional = true }
sc-cli = { git = "https://github.com/blockxlabs/substrate", optional = true, default-features = false, branch = "blockx-dev-5" }
ctrlc = { version = "3.0", features = ["termination"], optional = true }

[build-dependencies]
sc-cli = { git = "https://github.com/blockxlabs/substrate", optional = true, default-features = false, branch = "blockx-dev-5" }
build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
structopt = "0.3.3"
vergen = "3.0.4"

[features]
default = ["cli"]
cli = [
    "sc-cli",
    "tokio",
    "exit-future",
    "ctrlc",
    "sc-service/rocksdb",
]
