[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "sc-client", git = "https://github.com/blockxlabs/substrate.git" }
jsonrpc-core = "14.0.3"
node-primitives = { path = "../primitives" }
node-runtime = { path = "../runtime" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate.git" }
pallet-contracts-rpc = { git = "https://github.com/blockxlabs/substrate.git" }
pallet-transaction-payment-rpc = { git = "https://github.com/blockxlabs/substrate.git" }
frame-system-rpc-runtime-api = { git = "https://github.com/blockxlabs/substrate.git" }
transaction_pool = { package = "sc-transaction-pool", git = "https://github.com/blockxlabs/substrate.git" }
