[package]
name = "node-rpc"
version = "0.0.1"
edition = "2018"

[dependencies]
sc-client = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
jsonrpc-core = "14.0.3"
node-primitives = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
node-runtime = { path = "../runtime" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-api = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
pallet-contracts-rpc = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
pallet-transaction-payment-rpc = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
substrate-frame-rpc-system = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-transaction-pool = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sc-consensus-babe = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sc-consensus-babe-rpc = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-consensus-babe = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sc-keystore = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sc-consensus-epochs = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-consensus = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-blockchain = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
