[package]
name = "node-runtime"
version = "0.1.0"
authors = ["BlockX Labs"]
edition = "2018"
build = "build.rs"

[dependencies]
# third-party dependencies
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }

# primitives
node-primitives = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
primitives = { package = "sp-core", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
sp-staking = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
sp-api = { package = "sp-api", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
inherents = { package = "sp-inherents", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
sp-transaction-pool = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
sp-std = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
version = { package = "sp-version", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
sp-session = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }

# frame dependencies
authorship = { package = "pallet-authorship", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
babe = { package = "pallet-babe", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
balances = { package = "pallet-balances", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
executive = { package = "frame-executive", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
finality-tracker = { package = "pallet-finality-tracker", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
grandpa = { package = "pallet-grandpa", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
im-online = { package = "pallet-im-online", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
indices = { package = "pallet-indices", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
offences = { package = "pallet-offences", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
collective = { package = "pallet-collective", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
session = { package = "pallet-session", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
staking = { package = "pallet-staking", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
pallet-staking-reward-curve = { git = "https://github.com/blockxlabs/substrate", branch = "blockx-dev-5", default-features = false }
sudo = { package = "pallet-sudo", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
support = { package = "frame-support", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
system = { package = "frame-system", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
system-rpc-runtime-api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
utility = { package = "pallet-utility", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }
treasury = { package = "pallet-treasury", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-5" }

assets = { package = "dna-assets", path = "../../dna/assets", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4", git = "https://github.com/blockxlabs/substrate", branch = "blockx-dev-5" }

[features]
default = ["std"]
std = [
    "authority-discovery-primitives/std",
    "authority-discovery/std",
    "authorship/std",
    "babe-primitives/std",
    "babe/std",
    "balances/std",
    "sp-api/std",
    "codec/std",
    "executive/std",
    "finality-tracker/std",
    "grandpa/std",
    "im-online/std",
    "indices/std",
    "node-primitives/std",
    "offchain-primitives/std",
    "offences/std",
    "primitives/std",
    "randomness-collective-flip/std",
    "sp-std/std",
    "serde",
    "serde_derive",
    "session/std",
    "sp-runtime/std",
    "sp-staking/std",
    "staking/std",
    "sp-session/std",
    "sudo/std",
    "support/std",
    "system/std",
    "system-rpc-runtime-api/std",
    "timestamp/std",
    "utility/std",
    "transaction-payment/std",
    "transaction-payment-rpc-runtime-api/std",
    "version/std",
    "block-builder-api/std",
    "sp-transaction-pool/std",
    "inherents/std",
    "collective/std",
    "treasury/std"
]
